Phase5/negative_tests/prog7.dlp
//If statement should have '(' ')' not '{' '}'
if {2 < 3}
    break;
return 0;